force-app/main/default/objects/Expense_Payment_Reduction__c/Expense_Payment_Reduction__c.object-meta.xml
<CustomObject>
    <label>Expense Payment / Reduction</label>
    <nameField>
        <displayFormat>EPR-{0000}</displayFormat>
        <label>Expense Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Payment / Reduction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>