force-app/main/default/objects/Expense_Payment_Reduction__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>This field is used on the Settlement  Calculator page.</description>
    <inlineHelpText>Original Balance Due Amount</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>