force-app/main/default/objects/Expense_Payment_Reduction__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>litify_pm__Expense__c</referenceTo>
    <relationshipName>Payments_Reductions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>