force-app/main/default/objects/Expense_Payment_Reduction__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>