force-app/main/default/objects/Expense_Payment_Reduction__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Expense Payments / Reductions</relationshipLabel>
    <relationshipName>Expense_Payments_Reductions</relationshipName>
    <type>Lookup</type>
</CustomField>