force-app/main/default/objects/Expense_Payment_Reduction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Client Payment</fullName>
            </value>
            <value>
                <fullName>Settlement Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>